After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656606 - crash in gst_spectrum_reset_message_data()
crash in gst_spectrum_reset_message_data()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.30
Other Linux
: Normal major
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-15 19:47 UTC by Jonathon Jongsma
Modified: 2011-08-16 21:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
spectrum: avoid crashing by resetting the correct number of channels (976 bytes, patch)
2011-08-16 17:26 UTC, Vincent Penquerc'h
committed Details | Review

Description Jonathon Jongsma 2011-08-15 19:47:44 UTC
While using the 'spectrum' element for a personal project, I periodically run into the following crash, but only on certain files.  I haven't investigated the cause yet.

  • #0 __memset_sse2
    at ../sysdeps/x86_64/multiarch/../memset.S line 555
  • #1 gst_spectrum_reset_message_data
    at gstspectrum.c line 995
  • #2 gst_spectrum_transform_ip
    at gstspectrum.c line 1139
  • #3 gst_base_transform_handle_buffer
    at gstbasetransform.c line 2279
  • #4 gst_base_transform_chain
    at gstbasetransform.c line 2424
  • #5 gst_pad_push
    at gstpad.c line 4684
  • #6 gst_pad_push
    at gstpad.c line 4684
  • #7 gst_pad_push
    at gstpad.c line 4684
  • #8 gst_mad_chain
    at gstmad.c line 1781
  • #9 gst_pad_push
    at gstpad.c line 4684
  • #10 gst_base_parse_push_frame
    at gstbaseparse.c line 1909
  • #11 gst_base_parse_handle_and_push_frame
    at gstbaseparse.c line 1692
  • #12 gst_base_parse_loop
    at gstbaseparse.c line 2631
  • #13 gst_task_func
    at gsttask.c line 318
  • #14 g_thread_pool_thread_proxy
    at /build/buildd-glib2.0_2.28.6-2-amd64-N0qtaT/glib2.0-2.28.6/./glib/gthreadpool.c line 319
  • #15 g_thread_create_proxy
    at /build/buildd-glib2.0_2.28.6-2-amd64-N0qtaT/glib2.0-2.28.6/./glib/gthread.c line 1897
  • #16 start_thread
    at pthread_create.c line 304
  • #17 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #18 ??

Comment 1 Vincent Penquerc'h 2011-08-16 17:26:20 UTC
Created attachment 193980 [details] [review]
spectrum: avoid crashing by resetting the correct number of channels
Comment 2 Jonathon Jongsma 2011-08-16 20:28:06 UTC
Wow, that was fast.  I compiled with this patch, and I don't see the crash anymore.
Comment 3 Tim-Philipp Müller 2011-08-16 21:48:10 UTC
commit f8a9f5bc1c7e5b69f321ee4093aaa71e2a98cb8f
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Tue Aug 16 18:25:29 2011 +0100

    spectrum: avoid crashing by resetting the correct number of channels
    
    https://bugzilla.gnome.org/show_bug.cgi?id=656606