spectrum: avoid crashing by resetting the correct number of channels

https://bugzilla.gnome.org/show_bug.cgi?id=656606